window.location conditional added to the language-switcher.js and 75% width wrapper added to language switcher to prevent overlapse on tablet view

--- a/src/components/language-switcher/_language-switcher.scss
+++ b/src/components/language-switcher/_language-switcher.scss
@@ -16,6 +16,13 @@
   @if ($language=='ar') or ($language=='ur') {
     text-align: left;
   }
+
+  @media screen and (min-width: $screen-tablet) {
+    width: 75%;
+    text-align: right;
+    margin-left: auto;
+    // margin-right: 0;
+  }
 }
 
 .wpml-ls-legacy-list-horizontal {
